Prevent the game cover from being squished by a long description.

--- a/app/javascript/src/application.scss
+++ b/app/javascript/src/application.scss
@@ -177,6 +177,7 @@ nav.navbar {
     flex-flow: row nowrap;
 
     .text-block {
+      flex: 1 1 100%;
       padding-left: 15px;
     }
   }
